<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".TuneParamsActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/parameter_select_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/parametersChipGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:selectionRequired="true"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_speed_p"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/speed_kp"
            app:chipBackgroundColor="@drawable/chip_selection"
            app:chipStrokeColor="@color/colorPrimary"
            app:chipStrokeWidth="1dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_speed_i"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/speed_ki"
            app:chipBackgroundColor="@drawable/chip_selection"
            app:chipStrokeColor="@color/colorPrimary"
            app:chipStrokeWidth="1dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_speed_d"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/speed_kd"
            app:chipBackgroundColor="@drawable/chip_selection"
            app:chipStrokeColor="@color/colorPrimary"
            app:chipStrokeWidth="1dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_steer_p"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/steer_kp"
            app:chipBackgroundColor="@drawable/chip_selection"
            app:chipStrokeColor="@color/colorPrimary"
            app:chipStrokeWidth="1dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_steer_i"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:text="@string/steer_ki"
            app:chipBackgroundColor="@color/material_on_background_disabled"
            app:chipStrokeColor="@color/colorPrimary"
            app:chipStrokeWidth="1dp"
            app:chipSurfaceColor="@color/material_on_surface_disabled" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_steer_d"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/steer_kd"
            app:chipBackgroundColor="@drawable/chip_selection"
            app:chipStrokeColor="@color/colorPrimary"
            app:chipStrokeWidth="1dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.google.android.material.chip.Chip
            android:id="@+id/max_speed"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/max_speed"
            app:chipBackgroundColor="@drawable/chip_selection"
            app:chipStrokeColor="@color/colorPrimaryDark"
            app:chipStrokeWidth="1dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/min_speed"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/min_speed"
            app:chipBackgroundColor="@drawable/chip_selection"
            app:chipStrokeColor="@color/colorPrimary"
            app:chipStrokeWidth="1dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="32dp" />

    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:id="@+id/current_value_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_value_text" />

    <TextView
        android:id="@+id/current_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/current_value"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/adjustment_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/adjustment_text" />

    <TextView
        android:id="@+id/adjustment_text"
        android:layout_width="match_parent"
        android:layout_height="79dp"
        android:ems="10"
        android:text="@string/default_adjustment_value"
        android:textSize="30sp" />

    <LinearLayout
        style="?android:buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/increase_button"
            style="?android:buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#F44336"
            android:backgroundTint="#F44336"
            android:text="@string/increase" />

        <Button
            android:id="@+id/decrease_button"
            style="?android:buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00BCD4"
            android:backgroundTint="#00BCD4"
            android:text="@string/decrease" />
    </LinearLayout>

    <Button
        android:id="@+id/confirm_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm" />

    <TextView
        android:id="@+id/log_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars = "vertical"
        android:gravity="bottom"
    android:text="" />

</LinearLayout>