<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/connect_button"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connect"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backward_button"
        app:layout_constraintVertical_bias="0.335" />

    <Button
        android:id="@+id/on_off_button"
        android:layout_width="@dimen/direction_button_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/on_off"
        app:layout_constraintBottom_toBottomOf="@+id/left_button"
        app:layout_constraintEnd_toStartOf="@+id/right_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/left_button"
        app:layout_constraintTop_toBottomOf="@+id/forward_button" />

    <Button
        android:id="@+id/forward_button"
        android:layout_width="@dimen/direction_button_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/forward"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/videoView" />

    <Button
        android:id="@+id/left_button"
        android:layout_width="@dimen/direction_button_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/left"
        app:layout_constraintEnd_toStartOf="@+id/on_off_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forward_button" />

    <Button
        android:id="@+id/right_button"
        android:layout_width="@dimen/direction_button_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/right"
        app:layout_constraintBottom_toBottomOf="@+id/on_off_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/on_off_button"
        app:layout_constraintTop_toBottomOf="@+id/forward_button" />

    <Button
        android:id="@+id/backward_button"
        android:layout_width="@dimen/direction_button_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/backward"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/on_off_button" />

    <VideoView
        android:id="@+id/videoView"
        android:layout_width="319dp"
        android:layout_height="314dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>